Cambios para la llmada al backen. Lisseth.

--- a/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
@@ -21,7 +21,8 @@
         <h3 class="text-lg font-bold text-blue-800 text-center">{{ category2Name }}</h3>
         <app-book-list [categoryId]="category2Id"></app-book-list>
         <div class="flex justify-center mt-6">
-          <button class="btn-primary">
+          <button class="btn-primary"
+          >
             Abrir
           </button>
         </div>
