--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="mt-6">
-        <button (click)="addToCart()" class="w-full bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300">
+        <button *ngIf="libro"  (click)="addToCart(libro)" class="w-full bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300">
           Agregar al carrito
         </button>
       </div>
