--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,4 +1,3 @@
-
 <section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <div class="container mx-auto flex flex-col md:flex-row items-centerpx-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
@@ -50,8 +49,9 @@
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
 
-    <!-- FILTRO PRECIO -->
+    <!--###################   FILTRO PRECIO ####################################-->
     <div class="border-b border-gray-200 py-6">
+      <!-- Precios -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -77,8 +77,7 @@
           </li>
         </ul>
       </div>
-
-      <!-- FILTRO CATEGORÍA -->
+      <!--#################################3 FILTRO CATEGORÍA ############################## -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -93,9 +92,6 @@
         </ul>
       </div>
     </div>
-
-
-
   </div>
 
 
