--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -5,11 +5,11 @@
     <div class="  container mx-auto flex justify-center items-center space-x-4">
       <input
         type="text"
-        [(ngModel)]="filter"
+        [(ngModel)]="searchTerm"
         placeholder="Buscar libro por autor o título..."
         class="border  border-gray-300 rounded-xl px-4 py-2 w-2/3 text-custom-blue "
       />
-      <button (click)="searchBooks()"  class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
+      <button (click)="onSearch()"  class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
         Buscar
       </button>
     </div>
