--- a/src/app/component/carrito-compra/carrito-compra.component.html
+++ b/src/app/component/carrito-compra/carrito-compra.component.html
@@ -30,7 +30,7 @@
         </div>
       <div class="quantity-controls">
         <button (click)="decreaseQuantity(item)" class="bg-customGreen text-gray-700 px-3 py-1 rounded-l-md hover:bg-gray-300">-</button>
-        <span>{{ item.quantity }}</span>
+        <span class="bg-blue-800">{{ item.quantity }}</span>
         <button (click)="increaseQuantity(item)" class="bg-customAzulito text-gray-700 px-3 py-1 rounded-r-md hover:bg-gray-300">+</button>
       </div>
         <div class="flex flex-1 items-end justify-between text-sm">
