No permite añadir al carrito sin logear

--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -150,3 +150,11 @@
 
 
 </div>
+
+<div *ngIf="showAlert" class="fixed top-0 left-0 right-0 flex justify-center transition-transform duration-500 transform translate-y-0">
+  <div class="bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3 shadow-lg rounded-md w-full max-w-md mx-auto">
+    <p class="font-bold">Acción no permitida</p>
+    <p class="text-sm">Debes iniciar sesión para agregar al carrito.</p>
+  </div>
+</div>
+
