Mejorados estilos tarjetas

--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -43,9 +43,8 @@
 <!--  <label for="sort" class="-->
 <!--   mb-2  font-bold text-[20px] text-[#1D2C4B] font-montserrat  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
 <!--  >Ordenar por</label>-->
-<!--  <p>You select your team {{ opcionSeleccionada }} using change event</p>-->
 <!--  <select id="sort" class="border border-gray-300  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
-<!--          #filtro (change)="onSelected(filtro.value)">-->
+<!--          >-->
 <!--    <option default>Pick a team</option>-->
 <!--    <option  value="autor">Autor</option>-->
 <!--    <option value="titulo">Libro</option>-->
@@ -107,20 +106,31 @@
         <p>No hemos encontrado lo que busca pero si lo desea pude ponerse en contacto con nosotros y solicitarlo, o quizá prefiera volver a intentarlo realizando una búsqueda avanzada que se ajuste mejor a sus criterios.</p>
       </div>
     </div>
+
+<!--    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">-->
+<!--      <div *ngIf="!libros || libros.length === 0" class="text-center text-black-600 mt-4 bg-white">-->
+<!--        <p>No hay libros disponibles</p>-->
+<!--      </div>-->
+<!--    </div>-->
+
+
+
+
+
     <div class="max-w-2xl px-4 sm:px-6  lg:max-w-7xl lg:px-8">
       <div *ngIf="!noResults" class="card--1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
         <div *ngFor="let libro of filteredBooks" class="group  group cursor-pointer group overflow-hidden relative">
     <div class="card relative max-h-100 max-w-sm rounded overflow-hidden shadow-lg bg-white">
       <div class="relative">
-        <img [src]="libro.imagen" [alt]="libro.titulo"  class=" aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+        <img [src]="libro.imagen" [alt]="libro.titulo"  class=" h-80 aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
         <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
 
                           Añadir al carrito
                         </button>
       </div>
       <div class="px-6 py-4 flex flex-col items-center">
-        <h3 class="mt-4 text-lg font-bold text-gray-800 text-center">{{ libro.titulo }}</h3>
-                  <p class="text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
+        <h3 class="mt-0 mb-0 text-lg font-bold text-gray-800 text-center line-clamp-2">{{ libro.titulo }}</h3>
+                  <p class=" mt-0 mb-0 text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
                   <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
 
 
@@ -135,6 +145,9 @@
 
       </div>
     </div>
+
+
+
   </div>
 
 
@@ -155,8 +168,8 @@
 
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
 
-    <button *ngIf="currentPage > 1"
-       (click)="cargarLibros(currentPage - 1)" [disabled]="currentPage === 1"
+    <button
+            (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
        class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       Anterior
       <span class="sr-only"></span>
@@ -164,7 +177,7 @@
         <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
       </svg>
     </button>
-    <button (click)="cargarLibros(currentPage + 1)" [disabled]="currentPage >= totalPages"
+    <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage >= totalPages"
        class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       <span class="sr-only"></span>
       Siguiente
@@ -175,9 +188,7 @@
   </nav>
 </div>
 
-<div *ngIf="!libros || libros.length === 0" class="text-black text-center">
-  No hay libros disponibles
-</div>
+
 
 
 
